# soakpy

./: LICENSE  README.md  pyproject.toml
src/soak_split/: __init__.py  core.py
src/soakpy/: __init__.py  core.py
src/soakpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_core.py
