[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "soak-split"
version = "0.1.0"
description = "SOAK splitting utility"
authors = [
    { name="Tung Nguyen", email="nguyenlamtung10@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

dependencies = [
    "numpy",
    "scikit-learn"
]

[tool.setuptools.packages.find]
where = ["src"]