[project]
name = "soakpy"
version = "0.0.4"
description = "SOAK splitting utility"
authors = [
    { name="Tung Nguyen", email="nguyenlamtung10@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "scipy"
]